ConsultingHub/force-app/main/default/objects/Platform_App_Rating__c/Platform_App_Rating__c.object-meta.xml
<CustomObject>
    <label>Platform App Rating</label>
    <nameField>
        <displayFormat>AR-{00000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Platform App Ratings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>