ConsultingHub/force-app/main/default/objects/Platform_App_Rating__c/fields/Platform_App__c.field-meta.xml
<CustomField>
    <fullName>Platform_App__c</fullName>
    <label>Platform App</label>
    <referenceTo>Platform_App__c</referenceTo>
    <relationshipLabel>Ratings</relationshipLabel>
    <relationshipName>Platform_App_Ratings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>