ConsultingHub/force-app/main/default/objects/Platform_App_Rating__c/fields/Proficiency__c.field-meta.xml
<CustomField>
    <fullName>Proficiency__c</fullName>
    <label>Experience Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Intermediate</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
            <value>
                <fullName>Expert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>