ConsultingHub/force-app/main/default/objects/Platform_App_Rating__c/fields/Rated_By__c.field-meta.xml
<CustomField>
    <fullName>Rated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Platform_App_Ratings</relationshipName>
    <type>Lookup</type>
</CustomField>