ConsultingHub/force-app/main/default/objects/Platform_App_Rating__c/fields/Rated_On__c.field-meta.xml
<CustomField>
    <fullName>Rated_On__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Rated On</label>
    <type>Date</type>
</CustomField>